--- a/README
+++ b/README
@@ -4,3 +4,17 @@ Some awesome papers in computer science.
 
 There are some paper lists collected by:
 - Philip A. Laplante: 1994, 1996, 2008.
+- Jeff Huang: Best Paper Awards in Computer Science - Collection of best paper awards for 30 computer science conferences since 1996
+  https://jeffhuang.com/best_paper_awards/
+- Wikipedia: https://en.wikipedia.org/wiki/List_of_important_publications_in_computer_science
+
+## Link to Awesome Authors
+
+- https://www.cs.cornell.edu/annual_report/00-01/bios.htm#hartmanis
+- http://www.cs.cmu.edu/~scott/
+- https://ei.cs.vt.edu/~history/Wilkes.html
+- https://www.turing.org.uk/index.html
+- http://www.cs.unc.edu/~brooks/
+- http://infolab.stanford.edu/~ullman/
+- https://web.media.mit.edu/~minsky/
+- http://bayes.cs.ucla.edu/jp_home.html
